// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletWidget Connected address is properly displayed 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-text-7 makeStyles-walletButton-4 MuiButton-textPrimary-8 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6"
    >
      0x1a..1a1a
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;

exports[`WalletWidget Displays walletSelect menu upon click 1`] = `
<span
  class="svelte-1799bj2"
>
  MetaMask
   
</span>
`;

exports[`WalletWidget Renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-text-7 makeStyles-walletButton-4 MuiButton-textPrimary-8 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;
